SMP-25 Fixup the generation of JavaDoc for JDK 1.8
We enforce the use the JDK 1.8 for building with the enforcer plugin as our command line arguments to the javadoc only work on 1.8.